# habit_tracker

./: .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main_ci_cd.yaml
config/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py
